commenting out gpu declaration from overrides

--- a/overrides/values-AWS.yaml
+++ b/overrides/values-AWS.yaml
@@ -25,10 +25,10 @@
 #       project: default
 #       path: common/letsencrypt
 
-clusterGroup:
-  applications:
-    nvidia-gpu-operator:
-      name: nvidia-gpu-operator
-      project: gpu
-      path: kustomization/gpu-operator-certified/instance/overlays/aws
-      kustomize: true
+#clusterGroup:
+#  applications:
+#    nvidia-gpu-operator:
+#      name: nvidia-gpu-operator
+#      project: gpu
+#      path: kustomization/gpu-operator-certified/instance/overlays/aws
+#      kustomize: true
